Fix wrong color on send button

--- a/src/sections/Hero/Hero.scss
+++ b/src/sections/Hero/Hero.scss
@@ -173,6 +173,7 @@
             text-transform: uppercase;
             cursor: pointer;
             transition: all 0.2s ease-in-out;
+            background-color: colors.$white;
 
             &:hover {
               background-color: rgba(colors.$white, 0.8);
